verisys-worker/worker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: verisys-worker-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - domain.com
    secretName: verisys-worker-csrf
  rules:
  - host: domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: verisys-worker
            port:
              number: 80
